aligned the text in the diplay to the left and fixed the columns the clear button spans

--- a/style.css
+++ b/style.css
@@ -22,16 +22,16 @@ body{
 .screen{
     background-color: rgb(255, 255, 255);
     border-radius: 8px;
-    margin: 0 auto 20px auto;
-    padding: 10px;
-    color: rgb(255, 0, 0);
+    margin: 0 auto 20px 0;
+    padding: 20px;
+    /* color: rgb(255, 0, 0); */
+    text-align: right;
 }
 
 .buttons{
     display: grid;
     grid-template-columns: repeat(4, auto);
-    column-gap: 10px;
-    row-gap: 10px;
+    grid-gap: 10px;
     /* height: 100%; */
 }
 
@@ -41,13 +41,21 @@ button{
     border: 1px solid transparent;
     border-radius: 3px;
     /* margin-left: 40px; */
-  }
-  
-  button:hover{
+}
+
+button:hover{
     background-color: #004758;
     color: white;
-  }
-  
-  button:focus{
+}
+
+button:focus{
     outline: none;
-  }
+}
+
+.clear{
+    grid-column: span 2;
+}
+
+#add{
+    grid-row: span 2;
+}
